hphp/test/zend/bad/ext/pdo/tests/pdo_016.php.skipif
<?php # vim:ft=php
if (!extension_loaded('pdo')) die('skip');
$dir = getenv('REDIR_TEST_DIR');
if (false == $dir) die('skip no driver');
if (!strncasecmp(getenv('PDOTEST_DSN'), 'oci', strlen('oci'))) die('skip not relevant for oci driver - cannot reexecute after closing cursors without reparse');
require_once $dir . 'pdo_test.inc';
PDOTest::skip();
?>